Html updated for mobile, added few images

--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Responsive Cake webpage</title>
     <!-- Add a link to your css file here -->
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- Add your markup here -->
-</body>
-
+    <header>
+      <div class="banner">
+        <img src="images/jacob-schwartz-enVg_Vtsw1c-unsplash-sml.jpg" alt="" />
+        <h1>The best cakes in town delivered to your door</h1>
+        <nav>
+          <ul>
+            <li>HOME</li>
+            <li>CAKES</li>
+            <li>ORDERING</li>
+            <li>LESSONS</li>
+            <li>ABOUT</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div class="hero-text">
+          <h2>Welcome</h2>
+          <p class="hero-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            a sapien justo. Pellentesque in mauris in augue pretium ultricies at
+            id felis. Suspendisse lorem magna, venenatis id dui sed, bibendum
+            egestas diam.
+          </p>
+        </div>
+        <div class="hero-img"></div>
+        <div class="gallery"></div>
+      </section>
+    </main>
+    <footer>
+      <ul class="footer-links">
+        <li>Contact</li>
+        <li>Accessibility</li>
+        <li>Privacy Policy</li>
+      </ul>
+      <p></p>
+    </footer>
+  </body>
 </html>
