Updated banner and navbar

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <!-- Add your markup here -->
     <header>
       <div class="banner">
-        <img src="images/jacob-schwartz-enVg_Vtsw1c-unsplash-sml.jpg" alt="" />
+        <img src="images/Hamburger.svg" alt="nav" />
+
         <h1>The best cakes in town delivered to your door</h1>
+
         <nav>
           <ul>
             <li>HOME</li>
