Css and images added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Add your markup here -->
     <header>
       <div class="banner">
-        <img src="images/Hamburger.svg" alt="nav" />
+        <img class="hamburger" src="images/Hamburger.svg" alt="nav" />
 
         <h1>The best cakes in town delivered to your door</h1>
 
@@ -44,8 +44,38 @@
             egestas diam.
           </p>
         </div>
-        <div class="hero-img"></div>
-        <div class="gallery"></div>
+
+        <div class="hero-img-container">
+          <img
+            class="hero-img"
+            src="images/cake-unsplash-sml.jpg"
+            alt="hero"
+            class="hero-img"
+          />
+        </div>
+
+        <div class="gallery">
+          <img
+            class="sml-img"
+            src="images/dilyara-garifullina-lsqPDLZMy2I-unsplash.jpg"
+            alt="cake1"
+          />
+          <img
+            class="sml-img"
+            src="images/tyler-coleman-FtWQhwpe1qc-unsplash.jpg"
+            alt="cake2"
+          />
+          <img
+            class="sml-img"
+            src="images/bryam-blanco-nXKWLn8y9qE-unsplash.jpg"
+            alt="cake3"
+          />
+          <img
+            class="sml-img"
+            src="images/photo-1515088167831-556650cef41d.jpg"
+            alt="cake4"
+          />
+        </div>
       </section>
     </main>
     <footer>
@@ -54,7 +84,7 @@
         <li>Accessibility</li>
         <li>Privacy Policy</li>
       </ul>
-      <p></p>
+      <p>© 2021 Wondercake</p>
     </footer>
   </body>
 </html>
