Further Css changes made, desktop media queries added

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
         <nav>
           <ul>
-            <li>HOME</li>
-            <li>CAKES</li>
-            <li>ORDERING</li>
-            <li>LESSONS</li>
-            <li>ABOUT</li>
+            <a href="#"><li>HOME</li></a>
+            <a href="#"><li>CAKES</li></a>
+            <a href="#"><li>ORDERING</li></a>
+            <a href="#"><li>LESSONS</li></a>
+            <a href="#"><li>ABOUT</li></a>
           </ul>
         </nav>
       </div>
@@ -80,9 +80,9 @@
     </main>
     <footer>
       <ul class="footer-links">
-        <li>Contact</li>
-        <li>Accessibility</li>
-        <li>Privacy Policy</li>
+        <a href="#"><li>Contact</li></a>
+        <a href="#"><li>Accessibility</li></a>
+        <a href="#"><li>Privacy Policy</li></a>
       </ul>
       <p>© 2021 Wondercake</p>
     </footer>
