Logo added, banner image removed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -23,10 +24,16 @@
     <!-- Add your markup here -->
     <header>
       <div class="banner">
+        <div class="logo-wrapper">
+          <img src="images/cake-slice (2).png" alt="logo" class="logo" />
+          <p class="name">WonderCake</p>
+        </div>
+
         <img class="hamburger" src="images/Hamburger.svg" alt="nav" />
 
-        <h1>The best cakes in town delivered to your door</h1>
-
+        <div class="h1-wrapper">
+          <h1>The best cakes in town delivered to your door</h1>
+        </div>
         <nav>
           <ul>
             <a href="#"><li>HOME</li></a>
